# template-rust

./: .editorconfig  .rustfmt.toml  Cargo.toml  LICENSE-GLWTPL  LICENSE-MIT  README.md  cargo-generate.toml  post.rhai  pre.rhai
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
