[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-name}}"
authors = ["{{authors}}"]
readme = "README.md"
documentation = "https://docs.rs/{{project-name}}"
license = "{{license}}"
repository = "git@github.com:{{username}}/{{project-name}}.git"

[dependencies]
{% if serde -%}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
{%- endif -%}
{%- if tracing %}
tracing = "0.1"
tracing-subscriber = "0.3"
{%- endif -%}
{%- if async %}
tokio = { version = "1.0", features = ["full"] }
{%- endif -%}
