[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-name}}"
authors = ["{{authors}}"]
readme = "README.md"
documentation = "https://docs.rs/{{project-name}}"
license = "{{license}}"
repository = "https://git.davidon.top/public/{{project-name}}.git"

[dependencies]
{% if serde -%}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
{%- endif -%}
{%- if tracing %}
tracing = "0.1"
tracing-subscriber = "0.3"
{%- endif -%}
{%- if async %}
async-global-executor = { version = "2", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
futures-lite = "2"
{%- endif -%}
{%- if axum %}
axum = "0"
tower = { version = "0", features = ["full"] }
tower-http = { version = "0", features = ["fs"] }
leptos_reactive = { version = "0", features = ["ssr", "nightly"] }
leptos_reactive_axum = { version = "1", features = ["nightly"] }
{%- endif -%}
anyhow = "1"
scopeguard = "1"
partial_application = "0"
